Add podcast configuration and RSS feed generation support

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ OUTPUT_DIR=./output
 # 音声合成設定
 VOICE_NAME=Kyoko (Enhanced)
 VOICE_RATE=200
+
+# RSS・ポッドキャスト設定
+PODCAST_BASE_URL=https://your-bucket-name.s3.ap-northeast-1.amazonaws.com
+PODCAST_AUTHOR=TechTalkCast
+PODCAST_CATEGORY=Technology
+# PODCAST_IMAGE_URL=https://your-bucket.s3.amazonaws.com/images/podcast-cover.jpg
